--- a/nbs_vis/s_01.ipynb
+++ b/nbs_vis/s_01.ipynb
@@ -10,12 +10,169 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list_entires = [\"blue\",\"red\",\"green\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "blue\n",
+      "blue\n"
+     ]
     }
-   },
+   ],
+   "source": [
+    "type(list_entires[-3])\n",
+    "print(list_entires[0])\n",
+    "print(list_entires[-len(list_entires)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "big_list = [list_entires, list_entires]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'red'"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "big_list[- len(big_list)][- len(big_list)-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list_entires.append(\"yellow\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tuples\n",
+    "like list but not appendable, defined as is\n",
+    "## Dictionaries\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "user_ages = {\"mary\":42,\"jon\":34}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "user_1 = {\"age\":42,\"heigth\":1.65}\n",
+    "user_2 = {\"age\":50,\"heigth\":1.80}\n",
+    "user_3 = {\"age\":24,\"heigth\":1.83}\n",
+    "dict_1 = {\"mary\":user_1,\"jon\":user_2,\"alic\":user_3}\n",
+    "\n",
+    "#or\n",
+    "\n",
+    "dict_2 = dict( mary ={\"age\":42,\"heigth\":1.65},\n",
+    "             jon = {\"age\":50,\"heigth\":1.80},\n",
+    "             alic = {\"age\":24,\"heigth\":1.83})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "42"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict_1[\"mary\"][\"age\"]\n",
+    "dict_2[\"mary\"][\"age\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Number types\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'int'>\n",
+      "<class 'float'>\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(type(2))\n",
+    "print(type(2.0))\n",
+    "2==2.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
