--- a/nbs_vis/s_01.ipynb
+++ b/nbs_vis/s_01.ipynb
@@ -171,6 +171,106 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.5\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(11/2) #returns float\n",
+    "print(11//2) #returns int"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True True True\n"
+     ]
+    }
+   ],
+   "source": [
+    "### bool\n",
+    "print(True == 1,\n",
+    "False == 0,\n",
+    "True == 3//2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Intro to numpy arrays "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as numpaj\n",
+    "import os as operating_system"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#chaotic coding because you can\n",
+    "#this filepath method generalizes across op systems. suboptimal for chaotic coding.\n",
+    "filepath = operating_system.path.join(\"work\",\n",
+    "\"cds-vis-data\",\n",
+    "\"data\",\n",
+    "\"sample-data\", \"sample-data-01.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = numpaj.loadtxt(fname=\"/work/cds-vis-data/data/sample-data/sample-data-01.csv\",\n",
+    " delimiter=\",\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "numpy.ndarray"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
