--- a/nbs_lang/lang_s_02.ipynb
+++ b/nbs_lang/lang_s_02.ipynb
@@ -164,6 +164,155 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Working with text data 2 judgement day"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/work/cds-lang-data/100_novels/corpus/Dickens_Expectations_1861.txt\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "#the pompous one\n",
+    "fp = os.path.join(\"/work\",\"cds-lang-data\",\"100_novels\",\"corpus\",\"Dickens_Expectations_1861.txt\")\n",
+    "print(fp)\n",
+    "#the one that works\n",
+    "filepath = \"/work/cds-lang-data/100_novels/corpus/Dickens_Expectations_1861.txt\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(filepath) as f:\n",
+    "    text = f.read()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#dumb way, don´t do it unless you´`r a dummy dum dum\n",
+    "text = open(filepath).read()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "991613"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(text)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Document length"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokens = text.lower().split() #default for split is is whitespace"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "46"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "### counting word frequencies\n",
+    "keyword = \"love\"\n",
+    "\n",
+    "tokens.count(keyword)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'!\"#$%&\\'()*+,-./:;<=>?@[\\\\]^_`{|}~'"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "string.punctuation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#pythonic\n",
+    "c_tokens = [''.join(char for char in i if char not in string.punctuation) for i in tokens]\n",
+    "\n",
+    "#HW find a smaerter solution"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
