--- a/nbs_vis/vis_s_02.ipynb
+++ b/nbs_vis/vis_s_02.ipynb
@@ -38,36 +38,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 12,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hello world\n",
-      "Help on NoneType object:\n",
-      "\n",
-      "class NoneType(object)\n",
-      " |  Methods defined here:\n",
-      " |  \n",
-      " |  __bool__(self, /)\n",
-      " |      True if self else False\n",
-      " |  \n",
-      " |  __repr__(self, /)\n",
-      " |      Return repr(self).\n",
-      " |  \n",
-      " |  ----------------------------------------------------------------------\n",
-      " |  Static methods defined here:\n",
-      " |  \n",
-      " |  __new__(*args, **kwargs) from builtins.type\n",
-      " |      Create and return a new object.  See help(type) for accurate signature.\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": []
+   "source": [
+    "## Exercises \n",
+    "https://github.com/CHCAA-EDUX/Programming-for-the-Humanities-E23/blob/main/exercises/lesson-01-exercises.md"
+   ]
   },
   {
    "cell_type": "code",
@@ -75,6 +51,86 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello Jens how old are you?\n",
+      "Wow you're 20 years old\n"
+     ]
+    }
+   ],
+   "source": [
+    "def hello_2(name):\n",
+    "    print(\"hello \" + name + \" how old are you?\")\n",
+    "    age = input()\n",
+    "    print(\"Wow you're \" + str(age) + \" years old\")\n",
+    "\n",
+    "hello_2(\"Jens\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def vow_count(vowful_str):\n",
+    "    vows = [\"a\",\"á\",\"e\",\"é\",\"i\",\"í\",\"o\",\"ó\",\"ö\",\"ő\",\"u\",\"ú\",\"ü\",\"ű\",\"æ\",\"ø\",\"å\"]\n",
+    "\n",
+    "    proc_str = vowful_str.lower()\n",
+    "    count = 0\n",
+    "\n",
+    "    for i in proc_str:\n",
+    "        if i in vows:\n",
+    "            count = count + 1\n",
+    "        else:\n",
+    "            pass\n",
+    "    \n",
+    "    return(count)\n",
+    "\n",
+    "vow_count(\"alma\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def vow_count(vowful_str): ##liscomprehension??\n",
+    "    vows = [\"a\",\"á\",\"e\",\"é\",\"i\",\"í\",\"o\",\"ó\",\"ö\",\"ő\",\"u\",\"ú\",\"ü\",\"ű\",\"æ\",\"ø\",\"å\"]\n",
+    "\n",
+    "    proc_str = vowful_str.lower()\n",
+    "    count = 0\n",
+    "\n",
+    "    for i in proc_str:\n",
+    "        if i in vows:\n",
+    "            count = count + 1\n",
+    "        else:\n",
+    "            pass\n",
+    "    \n",
+    "    return(count)\n",
+    "\n",
+    "vow_count(\"alma\")"
+   ]
   }
  ],
  "metadata": {
