--- a/assignments_lan/ass_1.ipynb
+++ b/assignments_lan/ass_1.ipynb
@@ -2,9 +2,76 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Requirement already satisfied: pandas in /home/ucloud/.local/lib/python3.10/site-packages (2.2.0)\n",
+      "Requirement already satisfied: spacy in /home/ucloud/.local/lib/python3.10/site-packages (3.7.2)\n",
+      "Requirement already satisfied: numpy<2,>=1.22.4 in /home/ucloud/.local/lib/python3.10/site-packages (from pandas) (1.26.4)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in /home/ucloud/.local/lib/python3.10/site-packages (from pandas) (2.8.2)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /home/ucloud/.local/lib/python3.10/site-packages (from pandas) (2024.1)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in /home/ucloud/.local/lib/python3.10/site-packages (from pandas) (2024.1)\n",
+      "Requirement already satisfied: spacy-legacy<3.1.0,>=3.0.11 in /home/ucloud/.local/lib/python3.10/site-packages (from spacy) (3.0.12)\n",
+      "Requirement already satisfied: spacy-loggers<2.0.0,>=1.0.0 in /home/ucloud/.local/lib/python3.10/site-packages (from spacy) (1.0.5)\n",
+      "Requirement already satisfied: murmurhash<1.1.0,>=0.28.0 in /home/ucloud/.local/lib/python3.10/site-packages (from spacy) (1.0.10)\n",
+      "Requirement already satisfied: cymem<2.1.0,>=2.0.2 in /home/ucloud/.local/lib/python3.10/site-packages (from spacy) (2.0.8)\n",
+      "Requirement already satisfied: preshed<3.1.0,>=3.0.2 in /home/ucloud/.local/lib/python3.10/site-packages (from spacy) (3.0.9)\n",
+      "Requirement already satisfied: thinc<8.3.0,>=8.1.8 in /home/ucloud/.local/lib/python3.10/site-packages (from spacy) (8.2.3)\n",
+      "Requirement already satisfied: wasabi<1.2.0,>=0.9.1 in /home/ucloud/.local/lib/python3.10/site-packages (from spacy) (1.1.2)\n",
+      "Requirement already satisfied: srsly<3.0.0,>=2.4.3 in /home/ucloud/.local/lib/python3.10/site-packages (from spacy) (2.4.8)\n",
+      "Requirement already satisfied: catalogue<2.1.0,>=2.0.6 in /home/ucloud/.local/lib/python3.10/site-packages (from spacy) (2.0.10)\n",
+      "Requirement already satisfied: weasel<0.4.0,>=0.1.0 in /home/ucloud/.local/lib/python3.10/site-packages (from spacy) (0.3.4)\n",
+      "Requirement already satisfied: typer<0.10.0,>=0.3.0 in /home/ucloud/.local/lib/python3.10/site-packages (from spacy) (0.9.0)\n",
+      "Requirement already satisfied: smart-open<7.0.0,>=5.2.1 in /home/ucloud/.local/lib/python3.10/site-packages (from spacy) (6.4.0)\n",
+      "Requirement already satisfied: tqdm<5.0.0,>=4.38.0 in /home/ucloud/.local/lib/python3.10/site-packages (from spacy) (4.66.2)\n",
+      "Requirement already satisfied: requests<3.0.0,>=2.13.0 in /home/ucloud/.local/lib/python3.10/site-packages (from spacy) (2.31.0)\n",
+      "Requirement already satisfied: pydantic!=1.8,!=1.8.1,<3.0.0,>=1.7.4 in /home/ucloud/.local/lib/python3.10/site-packages (from spacy) (2.6.1)\n",
+      "Requirement already satisfied: jinja2 in /home/ucloud/.local/lib/python3.10/site-packages (from spacy) (3.1.3)\n",
+      "Requirement already satisfied: setuptools in /usr/lib/python3/dist-packages (from spacy) (59.6.0)\n",
+      "Requirement already satisfied: packaging>=20.0 in /home/ucloud/.local/lib/python3.10/site-packages (from spacy) (23.2)\n",
+      "Requirement already satisfied: langcodes<4.0.0,>=3.2.0 in /home/ucloud/.local/lib/python3.10/site-packages (from spacy) (3.3.0)\n",
+      "Requirement already satisfied: annotated-types>=0.4.0 in /home/ucloud/.local/lib/python3.10/site-packages (from pydantic!=1.8,!=1.8.1,<3.0.0,>=1.7.4->spacy) (0.6.0)\n",
+      "Requirement already satisfied: pydantic-core==2.16.2 in /home/ucloud/.local/lib/python3.10/site-packages (from pydantic!=1.8,!=1.8.1,<3.0.0,>=1.7.4->spacy) (2.16.2)\n",
+      "Requirement already satisfied: typing-extensions>=4.6.1 in /home/ucloud/.local/lib/python3.10/site-packages (from pydantic!=1.8,!=1.8.1,<3.0.0,>=1.7.4->spacy) (4.9.0)\n",
+      "Requirement already satisfied: six>=1.5 in /usr/lib/python3/dist-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in /home/ucloud/.local/lib/python3.10/site-packages (from requests<3.0.0,>=2.13.0->spacy) (3.3.2)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /home/ucloud/.local/lib/python3.10/site-packages (from requests<3.0.0,>=2.13.0->spacy) (3.6)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in /home/ucloud/.local/lib/python3.10/site-packages (from requests<3.0.0,>=2.13.0->spacy) (2.1.0)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /home/ucloud/.local/lib/python3.10/site-packages (from requests<3.0.0,>=2.13.0->spacy) (2023.11.17)\n",
+      "Requirement already satisfied: blis<0.8.0,>=0.7.8 in /home/ucloud/.local/lib/python3.10/site-packages (from thinc<8.3.0,>=8.1.8->spacy) (0.7.11)\n",
+      "Requirement already satisfied: confection<1.0.0,>=0.0.1 in /home/ucloud/.local/lib/python3.10/site-packages (from thinc<8.3.0,>=8.1.8->spacy) (0.1.4)\n",
+      "Requirement already satisfied: click<9.0.0,>=7.1.1 in /usr/lib/python3/dist-packages (from typer<0.10.0,>=0.3.0->spacy) (8.0.3)\n",
+      "Requirement already satisfied: cloudpathlib<0.17.0,>=0.7.0 in /home/ucloud/.local/lib/python3.10/site-packages (from weasel<0.4.0,>=0.1.0->spacy) (0.16.0)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in /home/ucloud/.local/lib/python3.10/site-packages (from jinja2->spacy) (2.1.4)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.3.2\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.0\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
+      "Usage: python -m spacy [OPTIONS] COMMAND [ARGS]...\n",
+      "Try 'python -m spacy --help' for help.\n",
+      "\n",
+      "Error: No such command 'install'.\n",
+      "/tmp/ipykernel_16928/4153407557.py:10: DeprecationWarning: \n",
+      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
+      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
+      "but was not found to be installed on your system.\n",
+      "If this would cause problems for you,\n",
+      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
+      "        \n",
+      "  import pandas as pd\n"
+     ]
+    }
+   ],
    "source": [
     "#import packages\n",
     "#os to fast track terminal use\n",
@@ -15,7 +82,18 @@
     "os.system(\"spacy install en_core_web_md\")\n",
     "nlp = spacy.load('en_core_web_md')\n",
     "#pandas for dataframes\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "#numpy for hjelp\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
    ]
   },
   {
@@ -34,21 +112,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'nlp' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/work/lang_anal/CDS_lang/assignments_lan/ass_1.ipynb Cell 3\u001b[0m line \u001b[0;36m9\n\u001b[1;32m      <a href='vscode-notebook-cell://app-5017531-0.cloud.sdu.dk/work/lang_anal/CDS_lang/assignments_lan/ass_1.ipynb#W2sdnNjb2RlLXJlbW90ZQ%3D%3D?line=4'>5</a>\u001b[0m     text \u001b[39m=\u001b[39m f\u001b[39m.\u001b[39mread()\n\u001b[1;32m      <a href='vscode-notebook-cell://app-5017531-0.cloud.sdu.dk/work/lang_anal/CDS_lang/assignments_lan/ass_1.ipynb#W2sdnNjb2RlLXJlbW90ZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39m#convert it with spacy\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell://app-5017531-0.cloud.sdu.dk/work/lang_anal/CDS_lang/assignments_lan/ass_1.ipynb#W2sdnNjb2RlLXJlbW90ZQ%3D%3D?line=8'>9</a>\u001b[0m text_nlp \u001b[39m=\u001b[39m nlp(text)\n\u001b[1;32m     <a href='vscode-notebook-cell://app-5017531-0.cloud.sdu.dk/work/lang_anal/CDS_lang/assignments_lan/ass_1.ipynb#W2sdnNjb2RlLXJlbW90ZQ%3D%3D?line=10'>11</a>\u001b[0m \u001b[39m# extract values, I have to use \"i\" to  index items, long words confuse me\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell://app-5017531-0.cloud.sdu.dk/work/lang_anal/CDS_lang/assignments_lan/ass_1.ipynb#W2sdnNjb2RlLXJlbW90ZQ%3D%3D?line=12'>13</a>\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m text_nlp:\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'nlp' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#1 text, 1 file\n",
     "\n",
@@ -60,10 +126,347 @@
     "\n",
     "text_nlp = nlp(text)\n",
     "\n",
-    "# extract values, I have to use \"i\" to  index items, long words confuse me\n",
-    "\n",
+    "# extract values, filter  NOUN, VERB, ADJ, ADV I have to use \"i\" to  index items, long words confuse me\n",
+    "extract_this = [\"NOUN\",\"VERB\",\"ADJ\",\"ADV\"]\n",
+    "#empty list for extracts\n",
+    "extract = []\n",
     "for i in text_nlp:\n",
-    "    print(i.text, i.pos)"
+    "    if i.pos_ in extract_this:\n",
+    "        extract.append(i.pos_)\n",
+    "    else:\n",
+    "        pass \n",
+    "#cunt unique values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['NOUN',\n",
+       " 'NOUN',\n",
+       " 'VERB',\n",
+       " 'VERB',\n",
+       " 'NOUN',\n",
+       " 'VERB',\n",
+       " 'ADJ',\n",
+       " 'NOUN',\n",
+       " 'VERB',\n",
+       " 'VERB',\n",
+       " 'NOUN',\n",
+       " 'NOUN',\n",
+       " 'NOUN',\n",
+       " 'VERB',\n",
+       " 'NOUN',\n",
+       " 'VERB',\n",
+       " 'NOUN',\n",
+       " 'NOUN',\n",
+       " 'ADV',\n",
+       " 'VERB',\n",
+       " 'VERB',\n",
+       " 'ADV',\n",
+       " 'NOUN',\n",
+       " 'NOUN',\n",
+       " 'VERB',\n",
+       " 'ADJ',\n",
+       " 'VERB',\n",
+       " 'NOUN',\n",
+       " 'NOUN',\n",
+       " 'ADV',\n",
+       " 'VERB',\n",
+       " 'VERB',\n",
+       " 'NOUN',\n",
+       " 'NOUN',\n",
+       " 'ADJ',\n",
+       " 'NOUN',\n",
+       " 'NOUN',\n",
+       " 'VERB',\n",
+       " 'NOUN',\n",
+       " 'ADV',\n",
+       " 'ADJ',\n",
+       " 'NOUN',\n",
+       " 'NOUN',\n",
+       " 'NOUN',\n",
+       " 'VERB',\n",
+       " 'ADV',\n",
+       " 'ADJ',\n",
+       " 'VERB',\n",
+       " 'ADV',\n",
+       " 'ADV',\n",
+       " 'ADV',\n",
+       " 'NOUN',\n",
+       " 'VERB',\n",
+       " 'VERB',\n",
+       " 'ADJ',\n",
+       " 'VERB',\n",
+       " 'NOUN',\n",
+       " 'VERB',\n",
+       " 'ADJ',\n",
+       " 'ADJ',\n",
+       " 'NOUN',\n",
+       " 'ADV',\n",
+       " 'ADJ',\n",
+       " 'VERB',\n",
+       " 'NOUN',\n",
+       " 'NOUN',\n",
+       " 'ADJ',\n",
+       " 'VERB',\n",
+       " 'ADJ',\n",
+       " 'NOUN',\n",
+       " 'ADJ',\n",
+       " 'NOUN',\n",
+       " 'NOUN',\n",
+       " 'ADJ',\n",
+       " 'NOUN',\n",
+       " 'ADJ',\n",
+       " 'ADJ',\n",
+       " 'VERB',\n",
+       " 'ADJ',\n",
+       " 'NOUN',\n",
+       " 'ADJ',\n",
+       " 'NOUN',\n",
+       " 'VERB',\n",
+       " 'VERB',\n",
+       " 'ADJ',\n",
+       " 'NOUN',\n",
+       " 'VERB',\n",
+       " 'NOUN',\n",
+       " 'VERB',\n",
+       " 'NOUN',\n",
+       " 'VERB',\n",
+       " 'ADJ',\n",
+       " 'NOUN',\n",
+       " 'NOUN',\n",
+       " 'VERB',\n",
+       " 'ADV',\n",
+       " 'ADJ',\n",
+       " 'VERB',\n",
+       " 'NOUN',\n",
+       " 'NOUN',\n",
+       " 'NOUN',\n",
+       " 'ADV',\n",
+       " 'ADJ',\n",
+       " 'ADV',\n",
+       " 'ADV',\n",
+       " 'ADJ',\n",
+       " 'VERB',\n",
+       " 'NOUN',\n",
+       " 'VERB',\n",
+       " 'ADJ',\n",
+       " 'NOUN',\n",
+       " 'NOUN',\n",
+       " 'ADV',\n",
+       " 'VERB',\n",
+       " 'ADJ',\n",
+       " 'NOUN',\n",
+       " 'ADV',\n",
+       " 'VERB',\n",
+       " 'ADJ',\n",
+       " 'NOUN',\n",
+       " 'ADJ',\n",
+       " 'NOUN',\n",
+       " 'NOUN',\n",
+       " 'NOUN',\n",
+       " 'NOUN',\n",
+       " 'VERB',\n",
+       " 'ADV',\n",
+       " 'VERB',\n",
+       " 'NOUN',\n",
+       " 'ADJ',\n",
+       " 'NOUN',\n",
+       " 'VERB',\n",
+       " 'ADJ',\n",
+       " 'VERB',\n",
+       " 'ADV',\n",
+       " 'VERB',\n",
+       " 'VERB',\n",
+       " 'VERB',\n",
+       " 'NOUN',\n",
+       " 'NOUN',\n",
+       " 'VERB',\n",
+       " 'ADJ',\n",
+       " 'NOUN',\n",
+       " 'VERB',\n",
+       " 'ADV',\n",
+       " 'ADJ',\n",
+       " 'ADJ',\n",
+       " 'NOUN',\n",
+       " 'ADV',\n",
+       " 'VERB',\n",
+       " 'NOUN',\n",
+       " 'NOUN',\n",
+       " 'NOUN',\n",
+       " 'ADJ',\n",
+       " 'VERB',\n",
+       " 'ADV',\n",
+       " 'VERB',\n",
+       " 'VERB',\n",
+       " 'NOUN',\n",
+       " 'ADJ',\n",
+       " 'NOUN',\n",
+       " 'ADJ',\n",
+       " 'NOUN',\n",
+       " 'ADJ',\n",
+       " 'NOUN',\n",
+       " 'NOUN',\n",
+       " 'NOUN',\n",
+       " 'VERB',\n",
+       " 'NOUN',\n",
+       " 'ADJ',\n",
+       " 'NOUN',\n",
+       " 'ADJ',\n",
+       " 'VERB',\n",
+       " 'VERB',\n",
+       " 'NOUN',\n",
+       " 'ADJ',\n",
+       " 'ADJ',\n",
+       " 'NOUN',\n",
+       " 'NOUN',\n",
+       " 'ADJ',\n",
+       " 'ADV',\n",
+       " 'ADJ',\n",
+       " 'NOUN',\n",
+       " 'VERB',\n",
+       " 'VERB',\n",
+       " 'VERB',\n",
+       " 'VERB',\n",
+       " 'VERB',\n",
+       " 'VERB',\n",
+       " 'VERB',\n",
+       " 'NOUN',\n",
+       " 'ADJ',\n",
+       " 'VERB',\n",
+       " 'VERB',\n",
+       " 'ADJ',\n",
+       " 'ADJ',\n",
+       " 'NOUN',\n",
+       " 'ADV',\n",
+       " 'VERB',\n",
+       " 'NOUN',\n",
+       " 'NOUN',\n",
+       " 'VERB',\n",
+       " 'VERB',\n",
+       " 'ADV',\n",
+       " 'ADJ',\n",
+       " 'ADJ',\n",
+       " 'VERB',\n",
+       " 'ADV',\n",
+       " 'ADJ',\n",
+       " 'NOUN',\n",
+       " 'NOUN',\n",
+       " 'ADV',\n",
+       " 'ADJ',\n",
+       " 'NOUN',\n",
+       " 'NOUN',\n",
+       " 'VERB',\n",
+       " 'NOUN',\n",
+       " 'ADJ',\n",
+       " 'NOUN',\n",
+       " 'ADV',\n",
+       " 'ADV',\n",
+       " 'VERB',\n",
+       " 'NOUN',\n",
+       " 'ADV',\n",
+       " 'ADJ',\n",
+       " 'VERB',\n",
+       " 'VERB',\n",
+       " 'VERB',\n",
+       " 'NOUN',\n",
+       " 'NOUN',\n",
+       " 'ADV',\n",
+       " 'VERB',\n",
+       " 'ADV',\n",
+       " 'ADJ',\n",
+       " 'ADV',\n",
+       " 'VERB',\n",
+       " 'NOUN',\n",
+       " 'NOUN',\n",
+       " 'VERB',\n",
+       " 'NOUN',\n",
+       " 'NOUN',\n",
+       " 'NOUN',\n",
+       " 'NOUN',\n",
+       " 'VERB',\n",
+       " 'NOUN',\n",
+       " 'NOUN',\n",
+       " 'ADJ',\n",
+       " 'NOUN',\n",
+       " 'VERB',\n",
+       " 'NOUN',\n",
+       " 'ADJ',\n",
+       " 'NOUN',\n",
+       " 'NOUN',\n",
+       " 'VERB',\n",
+       " 'NOUN',\n",
+       " 'VERB',\n",
+       " 'NOUN',\n",
+       " 'VERB',\n",
+       " 'NOUN',\n",
+       " 'VERB',\n",
+       " 'VERB',\n",
+       " 'NOUN',\n",
+       " 'NOUN',\n",
+       " 'NOUN',\n",
+       " 'NOUN',\n",
+       " 'VERB',\n",
+       " 'ADJ',\n",
+       " 'NOUN',\n",
+       " 'VERB',\n",
+       " 'NOUN',\n",
+       " 'VERB',\n",
+       " 'ADV',\n",
+       " 'ADJ',\n",
+       " 'ADJ',\n",
+       " 'NOUN',\n",
+       " 'ADV',\n",
+       " 'VERB',\n",
+       " 'VERB',\n",
+       " 'NOUN',\n",
+       " 'ADV',\n",
+       " 'ADV',\n",
+       " 'VERB',\n",
+       " 'VERB',\n",
+       " 'NOUN',\n",
+       " 'VERB',\n",
+       " 'ADJ',\n",
+       " 'NOUN',\n",
+       " 'VERB',\n",
+       " 'ADV',\n",
+       " 'ADV',\n",
+       " 'ADV']"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "extract"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array(['ADJ', 'ADV', 'NOUN', 'VERB'], dtype='<U4'),\n",
+       " array([ 57,  38, 109,  87]))"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.unique(extract, return_counts= True )"
    ]
   },
   {
@@ -71,7 +474,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#sorted(os.listdir(filepath))\n"
+   ]
   }
  ],
  "metadata": {
