adding up to sssignment1

--- a/assingments_vis/ass_1.ipynb
+++ b/assingments_vis/ass_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,52 +108,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1360"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "len(image_list)"
+    "def chunker(seq, size):\n",
+    "    return (seq[pos:pos + size] for pos in range(0, len(seq), size))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
+     "ename": "error",
+     "evalue": "OpenCV(4.9.0) :-1: error: (-5:Bad argument) in function 'calcHist'\n> Overload resolution failed:\n>  - Can't parse 'images'. Sequence item with index 0 has a wrong type\n>  - Can't parse 'images'. Sequence item with index 0 has a wrong type\n",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31mCannot execute code, session has been disposed. Please try restarting the Kernel."
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31merror\u001b[0m                                     Traceback (most recent call last)",
+      "\u001b[1;32m/work/lang_anal/CDS_lang/assingments_vis/ass_1.ipynb Cell 4\u001b[0m line \u001b[0;36m4\n\u001b[1;32m      <a href='vscode-notebook-cell://app-5017906-0.cloud.sdu.dk/work/lang_anal/CDS_lang/assingments_vis/ass_1.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=1'>2</a>\u001b[0m norm_list \u001b[39m=\u001b[39m[]\n\u001b[1;32m      <a href='vscode-notebook-cell://app-5017906-0.cloud.sdu.dk/work/lang_anal/CDS_lang/assingments_vis/ass_1.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m chunker(image_list,\u001b[39m100\u001b[39m):\n\u001b[0;32m----> <a href='vscode-notebook-cell://app-5017906-0.cloud.sdu.dk/work/lang_anal/CDS_lang/assingments_vis/ass_1.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=3'>4</a>\u001b[0m     norm_one \u001b[39m=\u001b[39m normit(i)\n\u001b[1;32m      <a href='vscode-notebook-cell://app-5017906-0.cloud.sdu.dk/work/lang_anal/CDS_lang/assingments_vis/ass_1.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=4'>5</a>\u001b[0m     norm_list\u001b[39m.\u001b[39mappend(norm_one)\n",
+      "\u001b[1;32m/work/lang_anal/CDS_lang/assingments_vis/ass_1.ipynb Cell 4\u001b[0m line \u001b[0;36m3\n\u001b[1;32m      <a href='vscode-notebook-cell://app-5017906-0.cloud.sdu.dk/work/lang_anal/CDS_lang/assingments_vis/ass_1.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mnormit\u001b[39m(image):\n\u001b[0;32m----> <a href='vscode-notebook-cell://app-5017906-0.cloud.sdu.dk/work/lang_anal/CDS_lang/assingments_vis/ass_1.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=2'>3</a>\u001b[0m     hist \u001b[39m=\u001b[39m cv2\u001b[39m.\u001b[39;49mcalcHist([image],[\u001b[39m0\u001b[39;49m,\u001b[39m1\u001b[39;49m,\u001b[39m2\u001b[39;49m],\u001b[39mNone\u001b[39;49;00m,[\u001b[39m255\u001b[39;49m,\u001b[39m255\u001b[39;49m,\u001b[39m255\u001b[39;49m],[\u001b[39m0\u001b[39;49m,\u001b[39m256\u001b[39;49m,\u001b[39m0\u001b[39;49m,\u001b[39m256\u001b[39;49m,\u001b[39m0\u001b[39;49m,\u001b[39m256\u001b[39;49m])\n\u001b[1;32m      <a href='vscode-notebook-cell://app-5017906-0.cloud.sdu.dk/work/lang_anal/CDS_lang/assingments_vis/ass_1.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=3'>4</a>\u001b[0m     normalized_hist \u001b[39m=\u001b[39m cv2\u001b[39m.\u001b[39mnormalize(hist, hist, \u001b[39m0\u001b[39m, \u001b[39m1.0\u001b[39m, cv2\u001b[39m.\u001b[39mNORM_MINMAX)\n\u001b[1;32m      <a href='vscode-notebook-cell://app-5017906-0.cloud.sdu.dk/work/lang_anal/CDS_lang/assingments_vis/ass_1.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=4'>5</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m(normalized_hist)\n",
+      "\u001b[0;31merror\u001b[0m: OpenCV(4.9.0) :-1: error: (-5:Bad argument) in function 'calcHist'\n> Overload resolution failed:\n>  - Can't parse 'images'. Sequence item with index 0 has a wrong type\n>  - Can't parse 'images'. Sequence item with index 0 has a wrong type\n"
      ]
     }
    ],
    "source": [
     "#loop and normalize flowers 100 at a time\n",
     "norm_list =[]\n",
-    "for i in image_list[0:100]:\n",
+    "for i in chunker(image_list,100):\n",
     "    norm_one = normit(i)\n",
     "    norm_list.append(norm_one)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_list = []\n",
+    "\n",
+    "for i in chunker(image_list[:5],1):\n",
+    "    test_list.append(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "error",
+     "evalue": "OpenCV(4.9.0) /io/opencv/modules/imgproc/src/histogram.cpp:160: error: (-215:Assertion failed) j < nimages in function 'histPrepareImages'\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31merror\u001b[0m                                     Traceback (most recent call last)",
+      "\u001b[1;32m/work/lang_anal/CDS_lang/assingments_vis/ass_1.ipynb Cell 6\u001b[0m line \u001b[0;36m5\n\u001b[1;32m      <a href='vscode-notebook-cell://app-5017906-0.cloud.sdu.dk/work/lang_anal/CDS_lang/assingments_vis/ass_1.ipynb#W5sdnNjb2RlLXJlbW90ZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m0\u001b[39m,\u001b[39mlen\u001b[39m(image_list)):\n\u001b[1;32m      <a href='vscode-notebook-cell://app-5017906-0.cloud.sdu.dk/work/lang_anal/CDS_lang/assingments_vis/ass_1.ipynb#W5sdnNjb2RlLXJlbW90ZQ%3D%3D?line=3'>4</a>\u001b[0m     \u001b[39mfor\u001b[39;00m j \u001b[39min\u001b[39;00m image_list[i]:\n\u001b[0;32m----> <a href='vscode-notebook-cell://app-5017906-0.cloud.sdu.dk/work/lang_anal/CDS_lang/assingments_vis/ass_1.ipynb#W5sdnNjb2RlLXJlbW90ZQ%3D%3D?line=4'>5</a>\u001b[0m         test \u001b[39m=\u001b[39m normit(j)\n\u001b[1;32m      <a href='vscode-notebook-cell://app-5017906-0.cloud.sdu.dk/work/lang_anal/CDS_lang/assingments_vis/ass_1.ipynb#W5sdnNjb2RlLXJlbW90ZQ%3D%3D?line=6'>7</a>\u001b[0m     test_list\u001b[39m.\u001b[39mappend(test)\n",
+      "\u001b[1;32m/work/lang_anal/CDS_lang/assingments_vis/ass_1.ipynb Cell 6\u001b[0m line \u001b[0;36m3\n\u001b[1;32m      <a href='vscode-notebook-cell://app-5017906-0.cloud.sdu.dk/work/lang_anal/CDS_lang/assingments_vis/ass_1.ipynb#W5sdnNjb2RlLXJlbW90ZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mnormit\u001b[39m(image):\n\u001b[0;32m----> <a href='vscode-notebook-cell://app-5017906-0.cloud.sdu.dk/work/lang_anal/CDS_lang/assingments_vis/ass_1.ipynb#W5sdnNjb2RlLXJlbW90ZQ%3D%3D?line=2'>3</a>\u001b[0m     hist \u001b[39m=\u001b[39m cv2\u001b[39m.\u001b[39;49mcalcHist([image],[\u001b[39m0\u001b[39;49m,\u001b[39m1\u001b[39;49m,\u001b[39m2\u001b[39;49m],\u001b[39mNone\u001b[39;49;00m,[\u001b[39m255\u001b[39;49m,\u001b[39m255\u001b[39;49m,\u001b[39m255\u001b[39;49m],[\u001b[39m0\u001b[39;49m,\u001b[39m256\u001b[39;49m,\u001b[39m0\u001b[39;49m,\u001b[39m256\u001b[39;49m,\u001b[39m0\u001b[39;49m,\u001b[39m256\u001b[39;49m])\n\u001b[1;32m      <a href='vscode-notebook-cell://app-5017906-0.cloud.sdu.dk/work/lang_anal/CDS_lang/assingments_vis/ass_1.ipynb#W5sdnNjb2RlLXJlbW90ZQ%3D%3D?line=3'>4</a>\u001b[0m     normalized_hist \u001b[39m=\u001b[39m cv2\u001b[39m.\u001b[39mnormalize(hist, hist, \u001b[39m0\u001b[39m, \u001b[39m1.0\u001b[39m, cv2\u001b[39m.\u001b[39mNORM_MINMAX)\n\u001b[1;32m      <a href='vscode-notebook-cell://app-5017906-0.cloud.sdu.dk/work/lang_anal/CDS_lang/assingments_vis/ass_1.ipynb#W5sdnNjb2RlLXJlbW90ZQ%3D%3D?line=4'>5</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m(normalized_hist)\n",
+      "\u001b[0;31merror\u001b[0m: OpenCV(4.9.0) /io/opencv/modules/imgproc/src/histogram.cpp:160: error: (-215:Assertion failed) j < nimages in function 'histPrepareImages'\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_list = []\n",
+    "for i in range(0,len(image_list)):\n",
+    "\n",
+    "    for j in image_list[i]:\n",
+    "        test = normit(j)\n",
+    "    \n",
+    "    test_list.append(test)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(0,len(image_list)):\n",
+    "\n",
+    "    for j in image_list[i]:\n",
+    "        print(j)\n",
+    "    "
    ]
   },
   {
